# traccc_hackathon

./: .gitignore  CMakeLists.txt  README.md
.github/: check_format.sh
algorithms/: CMakeLists.txt
algorithms/include/track_finding/: track_finding_algorithm.hpp
cmake/: traccc-compiler-options-cuda.cmake  traccc-compiler-options.cmake
core/include/algorithms/seeding/: doublet_finding.hpp  doublet_finding_helper.hpp  seed_filtering.hpp  seed_finding.hpp  seed_selecting_helper.hpp  spacepoint_grouping.hpp  transform_coordinates.hpp  triplet_finding.hpp  triplet_finding_helper.hpp
core/include/definitions/: algebra.hpp  primitives.hpp
core/include/edm/: collection.hpp  internal_spacepoint.hpp  measurement.hpp  seed.hpp  spacepoint.hpp  track_parameters.hpp  track_state.hpp
core/include/edm/detail/: transform_bound_to_free.hpp  transform_free_to_bound.hpp
core/include/edm/truth/: truth_bound_track_parameters.hpp  truth_measurement.hpp  truth_particle.hpp  truth_spacepoint.hpp
core/include/fitter/: gain_matrix_smoother.hpp  gain_matrix_smoother_impl.hpp  gain_matrix_updater.hpp  gain_matrix_updater.hpp~  gain_matrix_updater_impl.hpp  kalman_fitter.hpp
core/include/geometry/: surface.hpp
core/include/propagator/: direct_navigator.hpp  eigen_stepper.hpp  eigen_stepper_impl.hpp  propagator.hpp  propagator_options.hpp  stepping_helper.hpp
core/include/propagator/detail/: covariance_engine.hpp  jacobian_engine.hpp  void_aborter.hpp  void_actor.hpp  void_propagator_options.hpp
core/include/seeding/: doublet_finding.hpp  doublet_finding_helper.hpp  seed_filtering.hpp  seed_finding.hpp  seed_finding.hpp~  seed_selecting_helper.hpp  triplet_finding.hpp  triplet_finding_helper.hpp
core/include/utils/: arch_qualifiers.hpp  grid.hpp  grid_helper.hpp  intersection.hpp  unit_vectors.hpp  vector_helpers.hpp
cuda/: CMakeLists.txt
cuda/include/cuda/algorithms/: CMakeLists.txt
cuda/include/cuda/algorithms/seeding/: doublet_counting.cuh  doublet_finding.cuh  seed_finding.hpp  seed_selecting.cuh  triplet_counting.cuh  triplet_finding.cuh  weight_updating.cuh
cuda/include/cuda/algorithms/seeding/detail/: compatseed.hpp  doublet_counter.hpp  multiplet_config.hpp  stats_config.hpp  triplet_counter.hpp
cuda/include/cuda/propagator/: propagator.hpp
cuda/include/cuda/seeding/: doublet_counting.cuh  doublet_finding.cuh  seed_finding.hpp  seed_selecting.cuh  triplet_counting.cuh  triplet_finding.cuh  weight_updating.cuh
cuda/include/cuda/seeding/detail/: doublet_counter.hpp
cuda/include/cuda/utils/: CMakeLists.txt  cuda_helper.cuh  definitions.hpp  warming_up.cuh
cuda/src/algorithms/seeding/: doublet_counting.cu  doublet_finding.cu  seed_selecting.cu  triplet_counting.cu  triplet_finding.cu  weight_updating.cu
cuda/src/seeding/: doublet_counting.cu  doublet_finding.cu  seed_selecting.cu  triplet_counting.cu  triplet_finding.cu  weight_updating.cu
cuda/src/utils/: warming_up.cu  warming_up.cu~
data_hackathon/detector/: trackml-detector.csv
data_hackathon/events/muon_1/: event000000000-hits.csv  event000000000-particles_final.csv  event000000000-particles_initial.csv  timing.tsv
data_hackathon/events/muon_10/: event000000000-hits.csv  event000000000-particles_final.csv  event000000000-particles_initial.csv  timing.tsv
data_hackathon/events/muon_100/: event000000000-hits.csv  event000000000-particles_final.csv  event000000000-particles_initial.csv  timing.tsv
data_hackathon/events/muon_1000/: event000000000-hits.csv  event000000000-particles_final.csv  event000000000-particles_initial.csv  timing.tsv
data_hackathon/events/muon_10000/: event000000000-hits.csv  event000000000-particles_final.csv  event000000000-particles_initial.csv  timing.tsv
data_hackathon/events/muon_5/: event000000000-hits.csv  event000000000-particles_final.csv  event000000000-particles_initial.csv  timing.tsv
data_hackathon/events/muon_50/: event000000000-hits.csv  event000000000-particles_final.csv  event000000000-particles_initial.csv  timing.tsv
data_hackathon/events/muon_500/: event000000000-hits.csv  event000000000-particles_final.csv  event000000000-particles_initial.csv  timing.tsv
data_hackathon/events/muon_5000/: event000000000-hits.csv  event000000000-particles_final.csv  event000000000-particles_initial.csv  timing.tsv
data_hackathon/events/muon_50000/: event000000000-hits.csv  event000000000-particles_final.csv  event000000000-particles_initial.csv  timing.tsv
device/cuda/: CMakeLists.txt
device/cuda/include/cuda/fitter/: CMakeLists.txt  gain_matrix_smoother.cuh  gain_matrix_updater.cuh  gain_matrix_updater.hpp  kalman_fitter.hpp
device/cuda/include/cuda/fitter/detail/: cublas_wrapper.hpp  gain_matrix_updater_helper.hpp  gain_matrix_updater_impl.cuh
device/cuda/include/cuda/propagator/: CMakeLists.txt  direct_navigator.cuh  direct_navigator.cuh~  direct_navigator.hpp  eigen_stepper.cuh  eigen_stepper.hpp  propagator.cuh  propagator.hpp  state_collection.hpp
device/cuda/src/fitter/: gain_matrix_updater.cu  gain_matrix_updater.cu~
device/cuda/src/propagator/: direct_navigator.cu  direct_navigator.cu~  (+3 more)
examples/: CMakeLists.txt
examples/cpu/: CMakeLists.txt  atlas_cuts.hpp  seeding_example.cpp  seeding_example.cpp~  seq_example.cpp
examples/cuda/: CMakeLists.txt  atlas_cuts.hpp  seeding_example_cuda.cpp  seq_example_cuda.cpp  tml_multiplet_config.hpp  tml_stats_config.hpp  truth_tracking_cuda.cpp
examples/openmp/: par_example.cpp
io/include/csv/: csv_io.hpp
tests/: CMakeLists.txt
tests/cuda/: CMakeLists.txt
tests/cuda/algebra/: CMakeLists.txt  batched_cublas_matmul_tests.cpp  batched_cublas_tests.cpp  cublas_tests.cpp  cublas_wrapper.hpp  gain_matrix_updater_tests.cpp  matmul_kernel.cu  matmul_kernel.cuh  matmul_tests.cpp  matrix_multiplication_tests.cpp
tests/cuda/algorithms/: CMakeLists.txt  actor_tests.cpp  covariance_engine_tests.cpp  covariance_transport_tests.cpp  direct_navigator_tests.cpp  gain_matrix_tests.cpp  gain_matrix_updater_tests.cpp  propagator_sync_tests.cpp  propagator_tests.cpp  rk4_tests.cpp  stepper_tests.cpp
(+35 files in other folders)
